--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,57 +1,56 @@
-# VideoVault Frontend - Production Dockerfile with Nginx
 
-# Stage 1: Build the React app
-FROM oven/bun:1.0 AS builder
+# Multi-stage Dockerfile for VideoVault (frontend + backend)
 
+# --- Stage 1: Build frontend ---
+FROM oven/bun:1.0 AS frontend-build
 WORKDIR /app
-
-# Copy package files
-COPY package.json bun.lockb* ./
-
-# Install dependencies
-RUN bun install --frozen-lockfile
-
-# Copy source code
+COPY package.json bun.lock* ./
+RUN bun install
 COPY . .
-
-# Build the application
 RUN bun run build
 
-# Stage 2: Serve with Nginx
-FROM nginx:alpine
+# --- Stage 2: Backend + static ---
+FROM python:3.11-slim
 
-# Install curl for health checks
-RUN apk add --no-cache curl
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    ffmpeg \
+    wget \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy built app from builder stage
-COPY --from=builder /app/dist /usr/share/nginx/html
+# Install yt-dlp
+RUN pip install yt-dlp
 
-# Copy nginx configuration
-COPY nginx/nginx.conf /etc/nginx/nginx.conf
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+# Set working directory
+WORKDIR /app
 
-# Create directory for SSL certificates
-RUN mkdir -p /etc/nginx/ssl
+# Copy backend requirements and install
+COPY backend/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy SSL certificate placeholder files (replace with real certificates)
-COPY nginx/ssl/cert.pem /etc/nginx/ssl/cert.pem || echo "No SSL cert found"
-COPY nginx/ssl/key.pem /etc/nginx/ssl/key.pem || echo "No SSL key found"
+# Copy backend code
+COPY backend/ .
 
-# Set proper permissions
-RUN chown -R nginx:nginx /usr/share/nginx/html && \
-    chown -R nginx:nginx /var/cache/nginx && \
-    chown -R nginx:nginx /var/log/nginx && \
-    chown -R nginx:nginx /etc/nginx/conf.d
+# Copy built frontend to /app/static
+COPY --from=frontend-build /app/dist ./static
 
-# Switch to non-root user
-USER nginx
+# Проверка наличия index.html (build фронта)
+RUN if [ ! -f ./static/index.html ]; then echo "ERROR: Frontend build failed, index.html not found!" && exit 1; fi
 
-# Expose ports
-EXPOSE 80 443
+# Create downloads directory
+RUN mkdir -p downloads
+
+# Expose port for Render
+EXPOSE 10000
+
+# Environment variables
+ENV PYTHONPATH=/app
+ENV PORT=10000
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:80/ || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:10000/health || exit 1
 
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Start command
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "10000"]
